[workspace]
resolver = "2"

members = [
  # Cli
  "cli",
  "lib/instruments",
]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
async-stream = "0.3"
derivative = "2"
derive_builder = "0.12"
dotenv = "0.15"
indicatif = "0.17"
clap = "4"
config = "0.13"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
toml = "0.8"
tokio = "1"
tokio-util = "0.7"
serde = "1"
serde_json = "1"

# Internal
instruments = { path = "./lib/instruments" }

[profile.dev]
panic = "abort"

[profile.release]
debug = true
panic = "abort"
lto = "thin"
codegen-units = 1
