[workspace]
resolver = "2"

members = [
  # Cli
  "cli",
  "lib/instruments",
  "lib/swarmd-generated",
  "lib/slug-rs",
]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
async-stream = "0.3"
base64 = "0.21"
derivative = "2"
derive_builder = "0.12"
dotenv = "0.15"
indicatif = "0.17"
insta = { version = "1.33.0", features = ["yaml"] }
clap = "4"
config = "0.13"
futures = "0.3"
schemars = { version = "0.8" }
slug = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
toml = "0.8"
tokio = "1"
tokio-util = "0.7"
sentry = "0.32"
sentry-tracing = "0.32"
serde = "^1.0"
serde_json = "1.0"

# Internal
swarmd_instruments = { path = "./lib/instruments" }
swarmd_generated = "0.1.1-alpha.2"
swarmd_slug-rs = { path = "./lib/slug-rs" }

[profile.dev]
panic = "abort"

[profile.release]
debug = true
panic = "abort"
lto = "thin"
codegen-units = 1
