[package]
name = "swarmd_instruments"
description = "Declarative instrumentation"
authors = ["Swarmd Team"]
homepage = "https://swarmd.io"
repository = "https://github.com/swarmd_io/swarmd"
documentation = "https://docs.swarmd.io"
license = "MIT"
version = "0.1.1"
edition = "2021"

[features]
default = []

[dependencies]
anyhow.workspace = true
tracing = { workspace = true, features = ["attributes"] }
tracing-subscriber = { workspace = true, features = ["registry", "env-filter", "json"] }
sentry.workspace = true
sentry-tracing.workspace = true
