[package]
name = "swarmd_slug-rs"
description = "Swarmd slug-rs"
authors = ["Swarmd Team"]
homepage = "https://swarmd.io"
repository = "https://github.com/swarmd_io/swarmd"
documentation = "https://docs.swarmd.io"
license = "MIT"
version = "0.1.1-alpha.1"
edition = "2021"

[dependencies]
slug.workspace = true
schemars.workspace = true
serde.worksapce = true
thiserror.workspace = true
