[package]
name = "swarmd_local_runtime"
version = "0.0.5"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Swarmd local Runtime to use it within the CLI, based on Deno"

[lib]
name = "swarmd_local_runtime"
path = "src/lib.rs"

[build-dependencies]
deno_ast.workspace = true
deno_core.workspace = true

deno_console.workspace = true
deno_crypto.workspace = true
deno_fetch.workspace = true
deno_http.workspace = true
deno_tls.workspace = true
deno_url.workspace = true
deno_web.workspace = true
deno_webidl.workspace = true
deno_websocket.workspace = true
deno_net.workspace = true

# flate2 = { workspace = true, features = ["default"] }
serde.workspace = true

[dependencies]
deno_ast.workspace = true
deno_core.workspace = true

deno_console.workspace = true
deno_crypto.workspace = true
deno_fetch.workspace = true
deno_http.workspace = true
deno_tls.workspace = true
deno_url.workspace = true
deno_web.workspace = true
deno_webidl.workspace = true
deno_websocket.workspace = true
deno_net.workspace = true

fly-accept-encoding = "0.2.0"

tracing.workspace = true
tracing-core.workspace = true

hyper = { version = "0.14.26", features = ["server", "stream", "http1", "http2", "runtime"] }
log.workspace = true
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
tracing-test = { version = "0.2", features = ["no-env-filter"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "json"] }
insta = "1"
